--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tag above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="description" content="Description of the page less than 150 characters">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Joseph Casey's Portfolio and Personal Site</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/brands.css" integrity="sha384-KtmfosZaF4BaDBojD9RXBSrq5pNEO79xGiggBxf8tsX+w2dBRpVW5o0BPto2Rb2F" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/fontawesome.css" integrity="sha384-8WwquHbb2jqa7gKWSoAwbJBV2Q+/rQRss9UXL5wlvXOZfSodONmVnifo/+5xJIWX" crossorigin="anonymous">
+    <link rel="canonical"  href="https://www.josephmcasey.com">
+
+    <!--Twitter Card -->
+    <meta name="twitter:card"        content="summary">
+    <meta name="twitter:site"        content="@josephmcasey">
+    <meta name="twitter:creator"     content="@josephmcasey">
+    <meta name="twitter:url"         content="https://www.josephmcasey.com">
+    <meta name="twitter:title"       content="Joseph Casey">
+    <meta name="twitter:description" content="Developer, Originator, & Contriver. Get to know me a little better.">
+    <meta name="twitter:image"       content="https://www.josephcasey.com/headshot.jpg">
+
+    <title>JosephMCasey - Personal Site</title>
   </head>
   <body>
+    <noscript>
+      You need to enable JavaScript to view this website.
+    </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
